# cinema-booking-system-test

./: LICENSE  README.md  README.rst  requirements.txt  run.py  setup.cfg  test.py
cinema_booking_system/: __init__.py  booking.py  booking_menu.py  config_menu.py  menu.py  movie.py  screening.py  seating.py  seating_config.py  seating_display.py
cinema_booking_system/controllers/: __init__.py  booking_controller.py
cinema_booking_system/models/: __init__.py  booking.py  screening.py
docs/: design.md  env_setup.md
tests/: test_booking.py  test_booking_menu.py  test_config_menu.py  test_movie.py  test_screening.py  test_seating.py  test_seating_display.py
tests/controllers/: test_booking_controller.py
tests/models/: test_booking.py  test_movie.py  test_screening.py  test_seating_config.py
