[metadata]
name = cinema_booking_system
version = 0.1.0
description = A cinema booking system
author = Your Name
author_email = your.email@example.com
url = https://github.com/Lohenl/cinema-booking-system
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    setuptools==75.8.0
    simple-term-menu==1.6.6